centjes-gen/test_resources/balance/error/BE_PERCENTAGE_NO_PREVIOUS.cent
currency CHF 0.05

account equity:starting
account assets:cash
account expenses:coffee
account expenses:vat
  + assert virtual-only

2023-01-01
  | Opening balances
  * equity:starting -100 CHF
  * assets:cash     +100 CHF

2023-01-02
  | VAT example with no previous posting
  ! expenses:vat +0.90 CHF ~ 7.7%
